--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,17 @@
 
   <body>
     <main class="container mx-auto mt-28 px-5">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <% unless notice.nil? %>
+        <div class="bg-blue-300 rounded-lg w-full p-6">
+          <p class="notice"><%= notice %></p>
+        </div>
+      <% end %>
+      <% unless alert.nil? %>
+        <div class="bg-blue-300 rounded-lg w-full p-6">
+          <p class="alert"><%= alert %></p>
+        </div>
+      <% end %>
+
       <%= yield %>
     </main>
   </body>
