Styling log in and adding shared components

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,4 @@
-<div>
+<div class="max-w-xl mx-auto my-8">
   <h1 class="font-bold text-4xl">Home#index</h1>
   <p>Find me in app/views/home/index.html.erb</p>
-  <p class="my-5">
-    <%= form_with url: destroy_user_session_path, method: :delete do |form| %>
-      <%= form.submit "Logout", class: "bg-blue-600 py-2 px-4 text-white font-bold rounded-lg cursor-pointer" %>
-    <% end %>
-  </p>
 </div>
