--- a/app/views/components/_main_nav.html.erb
+++ b/app/views/components/_main_nav.html.erb
@@ -17,14 +17,14 @@
           </svg>
         </button>
       </div>
-      <div class="hidden md:flex items-center justify-end md:flex-1 lg:w-0">
+      <div class="hidden md:flex items-center justify-end md:flex-1 lg:w-0 space-x-2">
         <% if user_signed_in? %>
           <%= form_with url: destroy_user_session_path, method: :delete do |form| %>
             <%= render partial: "components/form_button", locals: { form: form, button_name: "Logout"} %>
           <% end %>
         <% else %>
-          <%= link_to "Sign In", new_user_session_path, class: "whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900" %>
-          <%= link_to "Sign Up", new_user_registration_path, class: "ml-8 whitespace-nowrap inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700" %>
+          <%= render partial: "components/plain_button", locals: { message: 'Sign In', path: new_user_session_path} %>
+          <%= render partial: "components/standard_button", locals: { message: 'Sign Up', path: new_user_registration_path} %>
         <% end %>
       </div>
     </div>
