--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,20 +12,21 @@
   </head>
 
   <body>
-    <main>
-      <%= render "components/main_nav" %>
+  <main>
+    <%= render "components/main_nav" %>
+    <%= render "components/small_window" do %>
       <% unless notice.nil? %>
-        <div class="bg-blue-300 rounded-lg w-full p-6">
+        <div class="bg-blue-300 rounded-lg w-full my-16 p-6 mx-auto">
           <p class="notice"><%= notice %></p>
         </div>
       <% end %>
       <% unless alert.nil? %>
-        <div class="bg-blue-300 rounded-lg w-full p-6">
+        <div class="bg-blue-300 rounded-lg w-full my-16 p-6 mx-auto">
           <p class="alert"><%= alert %></p>
         </div>
       <% end %>
-
-      <%= yield %>
-    </main>
+    <% end %>
+    <%= yield %>
+  </main>
   </body>
 </html>
