--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,8 +1,8 @@
-<div class="mx-auto md:w-2/3 w-full">
+<%= render "components/dashboard_window" do %>
   <h1 class="font-bold text-4xl">Editing team</h1>
 
   <%= render "form", team: @team %>
 
-  <%= link_to "Show this team", @team, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to teams", teams_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-</div>
+  <%= render partial: "components/gray_button", locals: { message: "Show this team", path: @team } %>
+  <%= render partial: "components/gray_button", locals: { message: "Back to teams", path: teams_path } %>
+<% end %>
