Create Styles for items

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,23 @@
 <div class="max-w-xl mx-auto my-8">
   <h1 class="font-bold text-4xl">Home#index</h1>
   <p>Find me in app/views/home/index.html.erb</p>
+  <div class="border-2 border-blue-100 p-4 rounded-lg my-5 border-dashed">
+    <h3 class="text-2xl font-bold mb-5">Category 1</h3>
+    <div class="flex w-full p-6 rounded-lg bg-blue-50 font-bold space-x-2 my-2">
+      <div class="flex-1">Item name</div>
+      <div class="text-blue-500">$20.00</div>
+      <div class="text-red-500">$25.00</div>
+    </div>
+    <div class="flex w-full p-6 rounded-lg bg-blue-50 font-bold space-x-2 my-2">
+      <div class="flex-1">Item name</div>
+      <div class="text-blue-500">$20.00</div>
+      <div class="text-green-600">$25.00</div>
+    </div>
+  </div>
+
+  <div class="flex w-full p-6 rounded-lg bg-blue-50 font-bold space-x-2 my-2">
+    <div class="flex-1">Item name</div>
+    <div class="text-blue-500">$20.00</div>
+    <div class="text-red-500">$25.00</div>
+  </div>
 </div>
