--- a/app/views/months/index.html.erb
+++ b/app/views/months/index.html.erb
@@ -1,14 +1,14 @@
-<div class="w-full">
+<%= render "components/dashboard_window" do %>
   <% if notice.present? %>
     <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
   <% end %>
 
   <div class="flex justify-between items-center">
     <h1 class="font-bold text-4xl">Months</h1>
-    <%= link_to 'New month', new_team_month_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
+    <%= render partial: "components/standard_button", locals: { message: 'New month', path: new_team_month_path } %>
   </div>
 
   <div id="months" class="min-w-full">
     <%= render @months %>
   </div>
-</div>
+<% end %>
