--- a/app/views/months/edit.html.erb
+++ b/app/views/months/edit.html.erb
@@ -1,8 +1,8 @@
-<div class="mx-auto md:w-2/3 w-full">
+<%= render "components/dashboard_window" do %>
   <h1 class="font-bold text-4xl">Editing month</h1>
 
   <%= render "form", month: @month %>
 
-  <%= link_to "Show this month", @month, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-  <%= link_to "Back to months", team_months_path(@month.team), class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-</div>
+  <%= render partial: "components/gray_button", locals: { message: 'Show this month', path: @month } %>
+  <%= render partial: "components/gray_button", locals: { message: 'Back to months', path: team_months_path(@month.team) } %>
+<% end %>
