--- a/app/views/months/show.html.erb
+++ b/app/views/months/show.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-auto md:w-2/3 w-full flex">
+<%= render "components/dashboard_window" do %>
   <div class="mx-auto">
     <% if notice.present? %>
       <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
@@ -6,10 +6,10 @@
 
     <%= render @month %>
 
-    <%= link_to 'Edit this month', edit_month_path(@month), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= render partial: "components/gray_button", locals: { message: 'Edit this month', path: edit_month_path(@month) } %>
     <div class="inline-block ml-2">
-      <%= button_to 'Destroy this month', month_path(@month), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
+      <%= render partial: "components/gray_destroy_button", locals: { message: 'Destroy this month', path: month_path(@month) } %>
     </div>
-    <%= link_to 'Back to months', team_months_path(@month.team), class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
+    <%= render partial: "components/gray_button", locals: { message: 'Back to months', path: team_months_path(@month.team) } %>
   </div>
-</div>
+<% end %>
