--- a/app/views/months/_month.html.erb
+++ b/app/views/months/_month.html.erb
@@ -1,8 +1,18 @@
 <div id="<%= dom_id month %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Month:</strong>
-    <%= month.month %>
-  </p>
+  <div class="border rounded-lg p-5">
+    <%= render partial: "components/standard_subheading", locals: { message: month.month.strftime('%B %Y') } %>
+    <div class="flex gap-4">
+      <div class="p-5 bg-blue-100 rounded-lg w-1/2 flex flex-col justify-center items-center">
+        <h3 class="text-2xl font-bold mb-5">Planned</h3>
+        <div class="text-2xl"><%= "$#{month.monthly_planned}" %></div>
+      </div>
+      <div class="p-5 bg-green-100 rounded-lg w-1/2 flex flex-col justify-center items-center">
+        <h3 class="text-2xl font-bold mb-5">Remaining</h3>
+        <div class="text-2xl"><%= "$100.00" %></div>
+      </div>
+    </div>
+  </div>
+
 
   <p class="my-5">
     <strong class="block font-medium mb-1">Monthly planned:</strong>
