Fix tests add category index to month

--- a/app/views/months/index.html.erb
+++ b/app/views/months/index.html.erb
@@ -9,6 +9,8 @@
   </div>
 
   <div id="months" class="min-w-full">
-    <%= render @months %>
+    <% @months.each do |month| %>
+      <%= link_to month.month.strftime('%B %Y'), month, class: "font-bold" %>
+    <% end %>
   </div>
 <% end %>
