--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,17 +1,5 @@
-<div id="<%= dom_id category %>">
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Name:</strong>
-    <%= category.name %>
-  </p>
+<div id="<%= dom_id category %>" class="border-2 border-blue-100 p-4 rounded-lg my-5 border-dashed">
+  <h3 class="text-2xl font-bold mb-5"><%= category.name %></h3>
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Month:</strong>
-    <%= category.month_id %>
-  </p>
 
-  <% if action_name != "show" %>
-    <%= link_to "Show this category", category, class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
-    <%= link_to 'Edit this category', edit_category_path(category), class: "rounded-lg py-3 ml-2 px-5 bg-gray-100 inline-block font-medium" %>
-    <hr class="mt-6">
-  <% end %>
 </div>
