--- a/app/views/months/_month.html.erb
+++ b/app/views/months/_month.html.erb
@@ -14,10 +14,7 @@
   </div>
 
 
-  <p class="my-5">
-    <strong class="block font-medium mb-1">Monthly planned:</strong>
-    <%= month.monthly_planned %>
-  </p>
+  <%= render @categories %>
 
   <% if action_name != "show" %>
     <%= render partial: "components/gray_button", locals: { message: 'Show this month', path: month} %>
