--- a/app/views/components/_dashboard_window.html.erb
+++ b/app/views/components/_dashboard_window.html.erb
@@ -1,3 +1,3 @@
-<div class="mx-auto mt-16 mx-4 md:mx-16 lg:mx-32">
+<div class="mx-auto mb-16 mt-16 mx-4 md:mx-16 lg:mx-32">
   <%= yield %>
 </div>
