--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,7 +1,7 @@
 <%= render "components/dashboard_window" do %>
   <h1 class="font-bold text-4xl">New item</h1>
 
-  <%= render "form", item: @item %>
+  <%= render "form", item: @item, category: @category %>
 
   <%= link_to 'Back to items', items_path, class: "ml-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 <% end %>
