--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <div class="space-y-2">
-      <%= render "devise/shared/error_messages", resource: resource %>
+      <%= render "devise/shared/error_messages", object: resource %>
 
       <div class="field">
         <%= f.label :email %><br/>
@@ -24,7 +24,7 @@
       </div>
 
       <div class="actions">
-        <%= render partial: "components/form_button", locals: { form: f, message_button: "Sign Up" } %>
+        <%= f.submit class: "rounded-lg py-2 px-4 bg-blue-600 text-white inline-block font-medium cursor-pointer", data: {turbo: false} %>
       </div>
     </div>
   <% end %>
