--- a/app/views/months/_month.html.erb
+++ b/app/views/months/_month.html.erb
@@ -17,6 +17,7 @@
     <div class="flex-1"><%= render @categories %></div>
     <div class="w-1/4 my-5 p-4 border-blue-100 border-2 border-dashed rounded-lg">
       <div>
+        <%= render partial: "transactions/form", locals: {transaction: Transaction.new, items: Item.where(category_id: @month.categories.pluck(:id))} %>
         <h3 class="text-2xl font-bold mb-2">Recent Transactions</h3>
         <% @transactions.each do |transaction| %>
           <div class="my-2 border-b flex justify-between">
