--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -21,10 +21,10 @@
     <%= form.number_field :spent, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
-  <% unless local_assigns[:item] %>
+  <% if local_assigns.has_key? :items %>
     <div class="my-5">
       <%= form.label :item_id %>
-      <%= form.number_field :item_id, class: "block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full" %>
+      <div><%= form.collection_select :item_id, items, :id, :name %></div>
     </div>
   <% end %>
 
